--- a/.github/workflows/update_tagged_versions.yml
+++ b/.github/workflows/update_tagged_versions.yml
@@ -9,6 +9,9 @@ jobs:
   update-and-deploy:
     runs-on: ubuntu-latest
     if: github.repository == 'LizenzFass78851/docker-fivem-fexemu'
+    env:           
+      GIT_USER: github-actions
+      GIT_EMAIL: github-actions@github.com
 
     steps:
       - name: key
@@ -44,6 +47,13 @@ jobs:
           [ -n "$without_suffix" ] && [[ "$without_suffix" =~ ^[0-9]+-[0-9a-f]{40}$ ]] && echo 'patching Dockerfile' && sed -i "s|ARG FIVEM_VER=.*|ARG FIVEM_VER=${without_suffix}|g" $GITHUB_WORKSPACE/Dockerfile; \
           done
 
+          # Commit FiveM changes if any
+          git add .
+          git status
+          git config --local user.name ${{ env.GIT_USER }}
+          git config --local user.email ${{ env.GIT_EMAIL }}
+          git diff --cached --quiet && exit 0 || git commit -m "feat: Update FiveM version to ${version}"
+
       - name: update fex-emu
         env:
           API_URL: "https://api.github.com/repos/FEX-Emu/FEX/releases/latest"
@@ -57,6 +67,13 @@ jobs:
           seq $c | while read x; do \
           [ -n "$LATEST_TAG" ] && echo 'patching Dockerfile' && sed -i "s|ARG FEX_VER=.*|ARG FEX_VER=${LATEST_TAG}|g" $GITHUB_WORKSPACE/Dockerfile; \
           done
+
+          # Commit FEX-EMU changes if any
+          git add .
+          git status
+          git config --local user.name ${{ env.GIT_USER }}
+          git config --local user.email ${{ env.GIT_EMAIL }}
+          git diff --cached --quiet && exit 0 || git commit -m "feat: Update FEX-EMU version to ${LATEST_TAG}"
 
       - name: update resources
         env:
@@ -72,32 +89,17 @@ jobs:
           [ -n "$LATEST_HASH" ] && [[ "$LATEST_HASH" =~ ^[0-9a-f]{40}$ ]] && echo 'patching Dockerfile' && sed -i "s|ARG DATA_VER=.*|ARG DATA_VER=${LATEST_HASH}|g" $GITHUB_WORKSPACE/Dockerfile; \
           done
 
-      - name: commit
+          # Commit resources changes if any
+          git add .
+          git status
+          git config --local user.name ${{ env.GIT_USER }}
+          git config --local user.email ${{ env.GIT_EMAIL }}
+          git diff --cached --quiet && exit 0 || git commit -m "feat: Update resources version to ${LATEST_HASH}"
+
+      - name: push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global --add safe.directory $GITHUB_WORKSPACE
-          git pull
-          git add .
-          git status
-          git config --local user.name github-actions
-          git config --local user.email github-actions@github.com
-
-          num_old=$(git show HEAD:Dockerfile | grep '^ARG FIVEM_NUM=' | cut -d'=' -f2)
-          num_new=$(grep '^ARG FIVEM_NUM=' Dockerfile | cut -d'=' -f2)
-          ver_old=$(git show HEAD:Dockerfile | grep '^ARG FIVEM_VER=' | cut -d'=' -f2)
-          ver_new=$(grep '^ARG FIVEM_VER=' Dockerfile | cut -d'=' -f2)
-          data_old=$(git show HEAD:Dockerfile | grep '^ARG DATA_VER=' | cut -d'=' -f2)
-          data_new=$(grep '^ARG DATA_VER=' Dockerfile | cut -d'=' -f2)
-          fex_old=$(git show HEAD:Dockerfile | grep '^ARG FEX_VER=' | cut -d'=' -f2)
-          fex_new=$(grep '^ARG FEX_VER=' Dockerfile | cut -d'=' -f2)
-          changelog=""
-          [ "${num_old}"  != "${num_new}"  ] && changelog+="FIVEM_NUM: ${num_old} -> ${num_new}\n"
-          [ "${ver_old}"  != "${ver_new}"  ] && changelog+="FIVEM_VER: ${ver_old} -> ${ver_new}\n"
-          [ "${data_old}" != "${data_new}" ] && changelog+="DATA_VER: ${data_old} -> ${data_new}\n"
-          [ "${fex_old}"  != "${fex_new}"  ] && changelog+="FEX_VER: ${fex_old} -> ${fex_new}\n"
-
-          git diff --cached --quiet && exit 0 || git commit -m "feat: Update Tagged Versions" -m "${changelog}"
           git config --local credential.helper '!x() { echo "password=$GITHUB_TOKEN"; };x'
           git push origin $GITHUB_REF_NAME
 
