after update tagged versions run build workflow

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,8 +1,8 @@
 name: Build for Test Docker Image
 
 on:
-  schedule:
-    - cron: '44 14 */3 * 2'
+#  schedule:
+#    - cron: '44 14 */3 * 2'
   push:
     branches: [ "master" ]
   workflow_dispatch:
