Update GitHub Actions bot user and email
Changed the old GitHub Actions bot identity to use the correct GitHub Actions bot identity.

--- a/.github/workflows/update_tagged_versions.yml
+++ b/.github/workflows/update_tagged_versions.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'LizenzFass78851/docker-fivem-fexemu'
     env:           
-      GIT_USER: github-actions
-      GIT_EMAIL: github-actions@github.com
+      GIT_USER: github-actions[bot]
+      GIT_EMAIL: github-actions[bot]@users.noreply.github.com
 
     steps:
       - name: key
