refactor(action): change git cmd to checkout

--- a/.github/workflows/update_tagged_versions.yml
+++ b/.github/workflows/update_tagged_versions.yml
@@ -21,12 +21,16 @@ jobs:
           echo "key=$KEY" >> $GITHUB_OUTPUT
           echo "################################################################" && bash -c "echo KEY=$KEY"
 
-      - name: clone
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global --add safe.directory $GITHUB_WORKSPACE
-          git clone https://github-actions:$GITHUB_TOKEN@${GITHUB_SERVER_URL##*/}/$GITHUB_REPOSITORY.git $GITHUB_WORKSPACE --branch $GITHUB_REF_NAME --depth=1 --single-branch
+      - uses: actions/checkout@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          set-safe-directory: true
+          repository: ${{ github.repository }}
+          ref: ${{ github.ref_name }}
+          path: ${{ github.workspace }}
+          fetch-depth: 1
+          clean: false
+          persist-credentials: true
 
       - name: update fivem
         id: update_fivem
