--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,36 +1,33 @@
-name: Build for Test Docker Image
+name: Build and Publish Docker Image
 
 on:
-#  schedule:
-#    - cron: '44 14 */3 * 2'
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule:
+    - cron: '44 14 */3 * 2'
   workflow_dispatch:
 
 concurrency:
-  group: ${{ (github.event_name == 'pull_request') && github.workflow && '-' && github.event.pull_request.number || github.workflow }}
-  cancel-in-progress: true
+  group: ${{ (github.event_name == 'pull_request') && github.workflow && '-' && github.event.pull_request.number || github.run_id }}
+  cancel-in-progress: ${{ (github.event_name == 'pull_request') && true || true }}
 
 env:
+  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.event.pull_request.base.repo.name || github.repository }}
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  test:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - runner: ubuntu-24.04
-          - runner: ubuntu-24.04-arm
-    runs-on: ${{ matrix.runner }}
-    env:
-      CONTAINER_NAME: test-fivem
+  build:
+    runs-on: ubuntu-24.04-arm
 
     permissions:
       contents: read
+      packages: write
+
+    env:
+      CONTAINER_NAME: test-fivem
 
     steps:
       - name: Checkout Dockerfile
@@ -48,16 +45,25 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Login to GitHub Container Registry
+        id: ghcr
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=${{ github.ref_name == 'master' }}
 
       - name: Build main Docker image
-        id: build
+        id: prebuild
         uses: docker/build-push-action@v6
         with:
           build-args: GH_TOKEN=${{ github.token }}
@@ -92,3 +98,17 @@ jobs:
         run: |
           sudo docker stop -t 10 ${{ env.CONTAINER_NAME }} || sudo docker stop -s SIGKILL -t 10 ${{ env.CONTAINER_NAME }} || true
           sudo docker rm -f ${{ env.CONTAINER_NAME }}
+
+      - name: Build and push main Docker image
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          build-args: GH_TOKEN=${{ github.token }}
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
+          cache-to: ${{ github.event_name != 'pull_request' && 'type=gha,mode=max,ignore-error=true' || '' }}
+          cache-from: ${{ github.event_name != 'pull_request' && 'type=gha' || '' }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
