--- a/.github/workflows/update_tagged_versions.yml
+++ b/.github/workflows/update_tagged_versions.yml
@@ -109,4 +109,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh workflow run docker-test.yml
+          gh workflow run docker-image.yml
