--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,8 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: ${{ (github.event_name == 'pull_request') && github.workflow && '-' && github.event.pull_request.number || github.run_id }}
-  cancel-in-progress: ${{ (github.event_name == 'pull_request') && true || false }}
+  group: ${{ (github.event_name == 'pull_request') && github.workflow && '-' && github.event.pull_request.number || github.workflow }}
+  cancel-in-progress: ${{ (github.event_name == 'pull_request') && true || true }}
 
 env:
   REGISTRY: ghcr.io
@@ -69,8 +69,8 @@ jobs:
           build-args: GH_TOKEN=${{ github.token }}
           context: .
           file: ./Dockerfile
-          cache-to: ${{ github.event_name != 'pull_request' && 'type=gha,mode=max,ignore-error=true' || '' }}
-          cache-from: ${{ github.event_name != 'pull_request' && 'type=gha' || '' }}
+#         cache-to: ${{ github.event_name != 'pull_request' && 'type=gha,mode=max,ignore-error=true' || '' }}
+#         cache-from: ${{ github.event_name != 'pull_request' && 'type=gha' || '' }}
           push: false
           load: true
           tags: ${{ steps.meta.outputs.tags }}
@@ -107,8 +107,8 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          cache-to: ${{ github.event_name != 'pull_request' && 'type=gha,mode=max,ignore-error=true' || '' }}
-          cache-from: ${{ github.event_name != 'pull_request' && 'type=gha' || '' }}
+#         cache-to: ${{ github.event_name != 'pull_request' && 'type=gha,mode=max,ignore-error=true' || '' }}
+#         cache-from: ${{ github.event_name != 'pull_request' && 'type=gha' || '' }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
