--- a/.github/workflows/update_tagged_versions.yml
+++ b/.github/workflows/update_tagged_versions.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     if: github.repository == 'LizenzFass78851/docker-fivem-fexemu'
     env:           
       GIT_USER: github-actions[bot]
